# tunnel-master

./: .gitignore  README.md  config.example.json  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docker/: docker-compose.yml
docker/test-ssh/: Dockerfile  entrypoint.sh  traffic-server.py
docs/superpowers/issues/: 001-nspanel-dismiss-on-select.md  002-connect-toggle-feedback.md  003-error-icon-tooltip.md
docs/superpowers/plans/: 2026-03-11-config-editor.md  2026-03-11-tunnel-master.md  2026-03-13-ux-fixes.md  2026-03-17-traffic-monitor-plan.md  2026-03-20-error-message-ux.md  2026-03-21-swiftui-migration-phase1.md  2026-03-22-swiftui-migration-phase2.md  2026-03-22-swiftui-migration-phase3.md  2026-03-23-nspanel-fullscreen-menubar.md
docs/superpowers/plans/done/: 2026-03-12-minimal-developer-theme.md  2026-03-13-auth-methods-proxyjump.md
docs/superpowers/specs/: 2026-03-11-tunnel-master-design.md  2026-03-12-auth-methods-design.md  2026-03-12-minimal-developer-theme-design.md  2026-03-13-ux-fixes-design.md  2026-03-17-traffic-monitor-design.md  2026-03-20-error-message-ux-design.md  2026-03-21-swiftui-migration-design.md
docs/superpowers/specs/done/: 2026-03-11-config-editor-design.md  2026-03-11-tunnel-master-design.md  2026-03-13-ux-fixes-design.md  2026-03-16-tunnel-reordering-design.md
macos-app/: build.sh  project.yml
macos-app/TunnelMaster/: ContentView.swift  Info.plist  StatusBarController.swift  StatusBarPanel.swift  TunnelMasterApp.swift  TunnelViewModel.swift
macos-app/TunnelMaster.xcodeproj/: project.pbxproj
macos-app/TunnelMaster/Dialogs/: HostKeyDialog.swift  KeyboardInteractiveDialog.swift  PassphraseDialog.swift  PasswordDialog.swift
macos-app/TunnelMaster/Views/: EditFormView.swift  EditListView.swift  TrafficSparkline.swift  TunnelListView.swift  TunnelRow.swift
rust-core/: Cargo.toml  uniffi.toml
rust-core/src/: api.rs  errors.rs  events.rs  keychain.rs  lib.rs  types.rs
rust-core/src/config/: store.rs
rust-core/src/tunnel/: connection.rs  forwarder.rs  health.rs  manager.rs  mod.rs  traffic.rs
scripts/: pre-commit  release.sh
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  errors.rs  keychain.rs  lib.rs  main.rs  types.rs
src-tauri/src/config/: store.rs
src-tauri/src/tunnel/: connection.rs  forwarder.rs  health.rs  manager.rs  mod.rs  traffic.rs
src/components/: CustomSelect.tsx  EditForm.tsx  EditList.tsx  HostKeyDialog.tsx  KeyboardInteractiveDialog.tsx  PassphraseDialog.tsx  PasswordDialog.tsx  TrafficSparkline.tsx  TunnelItem.tsx  TunnelList.tsx
src/hooks/: useTunnels.ts
