[package]
name = "tunnel-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "tunnel_core"

[dependencies]
uniffi = { version = "0.28", features = ["cli"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
russh = "0.46"
russh-keys = "0.46"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry"] }
dirs = "5"
thiserror = "2"
async-trait = "0.1"

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }
tracing-oslog = "0.3"

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }

[dev-dependencies]
tempfile = "3"
