[package]
name = "tunnel-master"
version = "0.1.0"
description = "macOS menu bar SSH tunnel manager"
authors = ["Sergio Olyva"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "tunnel_master_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
russh = "0.46"
russh-keys = "0.46"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
security-framework = "2"
thiserror = "2"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
